--- a/src/components/filters/Filters.module.css
+++ b/src/components/filters/Filters.module.css
@@ -1,10 +1,21 @@
 .filters {
-  display: flex;
-  width: 50%;
-  margin: 20px auto;
+  width: 20%;
+  background-color: #6a6bce;
+  padding: 20px;
+  border-radius: 30px;
+  height: 75vh;
+  box-shadow: 4px 8px 8px hsl(0deg 0% 0% / 0.38);
 }
 
-.checkboxes {
-  display: flex;
-  justify-content: space-between;
+.checkboxes h1 {
+  font-family: PoppinsLight;
+  color: #f7fff7;
+  font-size: 22px;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.filters hr {
+  width: 95%;
+  margin: 20px auto;
 }
