--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -1,3 +1,4 @@
+/* DARK MODE */
 .gps_button_wrapper {
   display: flex;
   justify-content: center;
@@ -50,6 +51,65 @@
 }
 .gps_button_wrapper button.gps_button:hover::before,
 .gps_button_wrapper button.gps_button:focus::before {
+  opacity: 1;
+
+  -webkit-transform: skewX(-16deg) translateX(0);
+  -ms-transform: skewX(-16deg) translateX(0);
+  transform: skewX(-16deg) translateX(0);
+
+  transition: -webkit-transform 1s ease-in-out;
+  transition: -ms-transform 1s ease-in-out;
+  transition: transform 1s ease-in-out;
+}
+
+/* LIGHT MODE */
+.gps_button_wrapper button.gps_button_light {
+  background-color: rgba(255, 255, 255, 0);
+  border: 2px solid #d8d9ff;
+  border-radius: 100px;
+  color: #d8d9ff;
+  display: inline-block;
+  font: normal normal 18px / 18px "Palanquin Dark", Helvetica, Arial, Verdana, sans-serif;
+  overflow: hidden;
+  padding: 8px 25px 10px;
+  position: relative;
+  text-decoration: none;
+  transition: all 0.75s ease-in-out;
+  z-index: 1;
+  cursor: pointer;
+}
+.gps_button_wrapper button.gps_button_light:hover,
+.gps_button_wrapper button.gps_button_light:focus {
+  color: #4d4f9e;
+  transition: all 0.75s ease-in-out;
+}
+
+.gps_button_wrapper button.gps_button_light::before {
+  background: linear-gradient(#d8d9ff, #d8d9ff) -100px 0 no-repeat;
+  content: "";
+  display: inline-block;
+
+  height: 10em;
+  width: 200%;
+
+  opacity: 0;
+
+  position: absolute;
+  top: 0;
+  left: -30%;
+
+  -webkit-transform: skewX(-16deg) translateX(-80%);
+  -ms-transform: skewX(-16deg) translateX(-80%);
+  transform: skewX(-16deg) translateX(-80%);
+
+  transition: opacity 0.75s ease-in-out, -webkit-transform 0s 0.85s;
+  transition: opacity 0.75s ease-in-out, -ms-transform 0s 0.85s;
+  transition: opacity 0.75s ease-in-out, transform 0s 0.85s;
+
+  z-index: -1;
+}
+.gps_button_wrapper button.gps_button_light:hover::before,
+.gps_button_wrapper button.gps_button_light:focus::before {
   opacity: 1;
 
   -webkit-transform: skewX(-16deg) translateX(0);
