--- a/src/components/UI/Task.module.css
+++ b/src/components/UI/Task.module.css
@@ -69,6 +69,18 @@
 .data h3 {
   margin: 0;
   font-family: PoppinsBold;
+  overflow: hidden;
+  max-width: 300px;
+  text-overflow: ellipsis;
+}
+
+.data h2 {
+  margin: 0;
+  font-family: PoppinsBold;
+  font-size: 14px;
+  overflow: hidden;
+  max-width: 300px;
+  text-overflow: ellipsis;
 }
 
 .description {
@@ -77,6 +89,7 @@
   text-overflow: ellipsis;
   max-width: 300px;
   font-size: 15px;
+  margin: 0;
 }
 
 .responsiblePerson {
