--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -1,3 +1,19 @@
+.disabled {
+  background-color: #c2c2c2 !important;
+  border: 2px solid #c2c2c2 !important;
+  border-radius: 100px;
+  color: #ffffff !important;
+  display: inline-block;
+  font: normal normal 18px / 18px "Palanquin Dark", Helvetica, Arial, Verdana, sans-serif;
+  overflow: hidden;
+  padding: 8px 25px 10px;
+  position: relative;
+  text-decoration: none;
+  transition: all 0.75s ease-in-out;
+  z-index: 1;
+  cursor: not-allowed;
+}
+
 /* DARK MODE */
 .gps_button_wrapper {
   display: flex;
