--- a/src/components/tasks/Tasks.module.css
+++ b/src/components/tasks/Tasks.module.css
@@ -45,3 +45,27 @@
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+@media (max-width: 750px) {
+  .tasks_wrapper {
+    width: 100%;
+  }
+}
+
+@media (max-width: 560px) {
+  .tasks {
+    display: block;
+  }
+  .task {
+    width: 100%;
+    margin-bottom: 60px;
+  }
+
+  .header {
+    display: none;
+  }
+
+  .tasks_wrapper {
+    height: 100%;
+  }
+}
