--- a/src/components/login/Login.module.css
+++ b/src/components/login/Login.module.css
@@ -32,3 +32,15 @@
   bottom: 0;
   margin-top: 50px;
 }
+
+@media (max-width: 900px) {
+  .wrapper {
+    width: 50%;
+  }
+}
+
+@media (max-width: 400px) {
+  .wrapper {
+    width: 80%;
+  }
+}
