Add trash icon and delete functionality to Task component

--- a/src/components/UI/Task.module.css
+++ b/src/components/UI/Task.module.css
@@ -25,6 +25,7 @@
   justify-content: start;
   display: flex;
   width: 100%;
+  position: relative;
 }
 
 .details {
@@ -103,6 +104,15 @@
   text-overflow: ellipsis;
   max-width: 300px;
   font-size: 15px;
+}
+
+.trash {
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  top: 15px;
+  right: 25px;
+  cursor: pointer;
 }
 
 @media (max-width: 1180px) {
